[package]
name = "towerish_side_effects"
version = "0.1.0"
edition = "2021"
publish = false

[workspace.metadata.release]
publish = false

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]
exclude = [
    "launchers/ios" # Special handling required
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.10"

