[package]
name = "towerish_side_effects"
version = "0.1.1"
edition = "2021"
publish = false

[workspace.metadata.release]
publish = false

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]
exclude = [
    "launchers/ios" # Special handling required
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
anyhow = "1.0.70"
bevy = "0.10"
bevy-inspector-egui = "0.18.3"
bevy_mod_picking = "0.12.0"
bevy_rapier3d = { version = "0.21.0", features = ["parallel"] }
strum = { version = "0.24.1", features = ["derive"] }

