[package]
name = "towerish_side_effects"
version = "0.2.0"
edition = "2021"
publish = false

[workspace.metadata.release]
publish = false

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]
exclude = [
    "launchers/ios" # Special handling required
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.10"
bevy-inspector-egui = "0.18.3"
bevy_mod_picking = "0.12.0"
bevy_rapier3d = { version = "0.21.0" , features=["debug-render-3d"]}
strum = { version = "0.24.1", features = ["derive"] }

bevy_prototype_debug_lines = { version = "0.10.1", features = ["3d"] }
bevy_atmosphere = {version="0.6", optional=true}
bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi", branch="main", features = ["3d"], default-features = false, optional=true}
bevy_editor_pls = "0.4"
bevy-vfx-bag = {version="0.2", optional=true}
seldom_fn_plugin = "0.3"
anyhow = "1.0.70"
bevy_egui = { version = "0.20.2", default-features = false, features = ["serde", "default_fonts", "arboard", "thread_local", "webbrowser"] }
rand = "0.8.5"

[features]
particles = ["dep:bevy_hanabi", "dep:bevy-vfx-bag", "dep:bevy_atmosphere"]
