[package]
name = "native-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
towerish_side_effects = { path = "../.." }
bevy = "0.10"
winit = "0.28.3"
image = "0.24.6"
bevy_egui = { version = "0.20.2", default-features = false, features = ["serde", "default_fonts", "arboard", "thread_local", "webbrowser"] }
