[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
towerish_side_effects = { path = "../.." }
bevy = "0.10"
web-sys = { version="0.3.61", features=["Document", "Window"] }
yew = "0.20.0"
stylist = { version= "0.10.1", features=["yew_integration"] }
